# 5dai-trial

./: .gitignore  Dockerfile  README.md  env.example  pyproject.toml
docs/: mkdocs.yaml
source/5dai/: __init__.py  api.py  run.py
source/5dai/models/: common.py  tasks.py
source/5dai/services/: tasks.py
source/5dai/support/: llm.py  paths.py  store.py
source/starter/: __init__.py  api.py  starter.py
